# bfeax

./: CLAUDE.md  README.md  benchmark_forces.py  example.ipynb  example_fast_builds.ipynb  example_specify_symmetry.ipynb  example_spheroid.ipynb  pyproject.toml  test_expansion_grid.py  test_flattened_nfw.py  test_plummer_cored.py  test_sigma_taper.py  test_spheroid.py  test_triaxial_nfw.py
.claude/: settings.local.json
benchmarks/: bench_quadrature.py  benchmark_build.py  benchmark_forces.py
bfe/: density_coeffs.py  grid.py  potential.py  sph_harm.py  spheroid.py
bfeax/: __init__.py  density_coeffs.py  poisson.py  potential.py  sph_harm.py  spline.py
bfeax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: benchmark_gpu.ipynb  example.ipynb  example_fast_builds.ipynb  example_specify_symmetry.ipynb  example_spheroid.ipynb  vmap_build.ipynb
reference/: reference.aux  reference.out  reference.tex  reference.toc
tests/: test_acceleration.py  test_disk.py  test_expansion_grid.py  test_flattened_nfw.py  test_from_spheroid.py  test_plummer_cored.py  test_smoke.py  test_spheroid.py  test_timing.py  test_triaxial_nfw.py
